--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_MONGO_DB=intratec
-NODE_MONGO_HOST=localhost
-NODE_MONGO_PORT=27017
+NODE_MONGO_HOST=julianandresarguello
+NODE_MONGO_PORT=esponja18@cluster-test.uril6ag.mongodb.net/?retryWrites=true&w=majority
 JWT_KEY=463ca1b82b92aa98e76b6720abc5daf122f6e29a
 JWT_KEY_RECOVERY=051CE83850723FB35CCF1336901D304981D212FC
