--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Argüello Juliián Andrés / Gariglio Sebastian Mariano / Signorini Alessandro Paolo",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
